# skills-pool

./: .gitignore  README.md  pyproject.toml  skillctl.py
config/: targets.conf
skillctl/: __init__.py  cli.py  config.py  ecosystem.py  indexing.py  maintenance.py  markets.py  models.py  promote.py  report.py  scanner.py  syncer.py  tracking.py  ui.py  web.py
skills/agent-development/: .skillctl-origin.json
skills/algorithmic-art/: .skillctl-origin.json
skills/brand-guidelines/: .skillctl-origin.json
skills/canvas-design/: .skillctl-origin.json
skills/claude-automation-recommender/: .skillctl-origin.json
skills/claude-md-improver/: .skillctl-origin.json
skills/cloudflare-deploy/: .skillctl-origin.json
skills/command-development/: .skillctl-origin.json
skills/develop-web-game/: .skillctl-origin.json
skills/doc/: .skillctl-origin.json
skills/doc-coauthoring/: .skillctl-origin.json
skills/docx/: .skillctl-origin.json
skills/docx-20260213-110332/: .skillctl-origin.json
skills/example-skill/: .skillctl-origin.json
skills/excalidraw-diagram/: .skillctl-origin.json
skills/figma/: .skillctl-origin.json
skills/figma-implement-design/: .skillctl-origin.json
skills/frontend-design/: .skillctl-origin.json
skills/frontend-design-20260210-101500/: .skillctl-origin.json
skills/frontend-design-20260213-113300/: .skillctl-origin.json
skills/gemini-api-dev/: .skillctl-origin.json
skills/gh-address-comments/: .skillctl-origin.json
skills/gh-fix-ci/: .skillctl-origin.json
skills/hook-development/: .skillctl-origin.json
tools/: link-skills.sh
(+52 files in other folders)
